# art-voice-agent-accelerator

./: .env.sample  .gitignore  CONTRIBUTING.md  Makefile  README.md  azure.yaml  docker-compose.yml  environment.yaml  mkdocs.yml  package-lock.json  package.json  pharmahero_session.txt  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  test.ipynb
.devcontainer/: devcontainer.json  post_create.sh
.github/: copilot-instructions.md
.github/workflows/: azure-dev.yml  code-quality.yml  deploy-azd-complete.yml  deploy-azd-staging.yml  deploy-azd.yml  docs.yml
.github/workflows/templates/: deploy-azd.yml
app/backend/: app2.py  functions.py  server.py
app/backend/templates/: voice_agent_system.jinja
app/frontend-jin/realtime-voice-client/: package-lock.json  package.json
app/local_stt_aoai_tts/backend/: prompt_manager.py  tools.py
app/react_stt_aoai_tts/backend/: server.py
app/react_stt_aoai_tts/frontend/: package-lock.json  package.json
apps/: README.md
apps/rtagent/backend/: main.py  settings.py
apps/rtagent/frontend/: package-lock.json
devops/: azure-bicep.yaml
devops/scripts/: Generate-EnvFromTerraform.ps1  generate-env-from-terraform.sh  generate_test_audio.py  run_bandit.py
devops/scripts/azd/: postprovision.sh  preprovision.sh
docs/: ACSBargeInFlow.md  DataArchitecture.md  DeploymentGuide.md  Troubleshooting.md  acs-media-barge-in-flow.md
docs/api/: README.md
docs/architecture/: README.md  acs-flows.md  data-flows.md  integrations.md  llm-orchestration.md
docs/deployment/: README.md
docs/getting-started/: README.md  local-development.md
docs/operations/: troubleshooting.md
docs/reference/: README.md  repository-structure.md  speech-synthesis.md  streaming-modes.md
infra/: README.md  ai-gateway.bicep  app.bicep  loadbalancer-fixed.bicep  loadbalancer.bicep  loadbalancer.json  main.bicep  main.parameters.json  network.bicep
infra-tf/: apps.tf  containers.tf  data.tf  main.tf  main.tfvars.json  outputs.tf  provider.conf.json
infra/modules/: types.bicep
infra/modules/app/: container-app.bicep
infra/modules/communication/: communication-services.bicep
infra/modules/networking/: private-endpoint.bicep
infra/modules/security/: README.md  appregistration.json  appupdate.json
infra/terraform/: README.md  ai-foundry.tf  apps.tf  communication.tf  containers.tf  data.tf  main.tf  main.tfvars.json  outputs.tf  variables.tf
infra/terraform/params/: main.tfvars.dev.json  main.tfvars.prod.json  main.tfvars.staging.json
labs/: 01-build-your-audio-agent.ipynb  02-how-to-gpt4o-transcribe.ipynb  02-how-to-use-aoai-for-realtime-transcriptions.ipynb  03-latency-arena.ipynb  05-speech-to-text-multilingual.ipynb
rtagent/backend/: Dockerfile  helpers.py  main.py  settings.py  shared_ws.py
rtagent/backend/handlers/: acs_handler.py  acs_media_handler.py  acs_transcript_handler.py
rtagent/backend/orchestration/: gpt_flow.py  (+1 more)
samples/labs/: 03-latency-arena.ipynb
scripts/: azd-postprovision.sh  azd-preprovision.sh
scripts/azd/: azd-appsvc-deploy.sh  azd-postprovision.sh  postprovision.ps1  postprovision.sh  preprovision.ps1  preprovision.sh
src/: __init__.py  quickstart.py
src/acs/: acs_helper.py
src/agents/: base.py
src/aoai/: aoai_helper.py  aoai_transcribe.py  audio_util.py  manager.py  manager_transcribe.py  push_to_talk.py
src/api/: fastapi.py  test_fast_api.py
src/cosmosdb/: manager.py
src/enums/: __init__.py
src/openai_test/: push_to_talk.py  stt_aoai.py
src/pools/: async_pool.py  connection_manager.py  dedicated_tts_pool.py
src/realtime_client/: __init__.py  api.py  client.py  conversation.py  event_handler.py  utils.py
src/realtime_client_working/: __init__.py  api.py  client.py  conversation.py  event_handler.py  utils.py
src/redis/: manager.py
src/speech/: app.py  speech_recognizer.py  speech_to_text.py  text_to_speech.py
src/stateful/: state_managment.py
src/vad/: vad_iterator.py
tests/: apim-test.http  backend.http  test_acs_events_handlers.py  test_acs_media_lifecycle.py  test_acs_media_lifecycle_memory.py  test_acs_simple.py  test_dtmf_validation.py  test_dtmf_validation_failure_cancellation.py  test_events_architecture_simple.py  test_speech_queue.py  test_v1_events_integration.py
tests/load/: README.md  acs_call_load_test.py  acs_call_load_test_dev.py  audio_generator.py  comprehensive_load_test.py  conversation_simulator.py  detailed_statistics_analyzer.py  load_test_conversations.py  multi_turn_load_test.py  websocket_response_analyzer.py
usecases/browser_RTMedAgent/: README.md
usecases/local_RTMedAgent/: app.py
utils/: azure_auth.py  ml_logging.py  telemetry_config.py  trace_context.py
utils/docstringtool/: docstring_standardizer.py
voiceagents/testagent/: chainlitapp.py  gradioapp.py  instructions.py  pcvoiceagent.py  pcvoiceagent_v2.py  session_config.yaml
(+201 files in other folders)
